tests/ui/scalar_types_sqlite/fail/date_trunc_requires_postgres.stderr
error[E0277]: DATE_TRUNC output type is not defined for `drizzle::sqlite::types::Text` on this dialect
 --> tests/ui/scalar_types_sqlite/fail/date_trunc_requires_postgres.rs:7:9
  |
5 |     let _ = date_trunc(
  |             ---------- required by a bound introduced by this call
6 |         "day",
7 |         raw_non_null::<SQLiteValue, drizzle::sqlite::types::Text>("CURRENT_TIMESTAMP"),
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ DATE_TRUNC accepts timestamp/timestamptz and preserves the timestamp flavor
  |
  = help: the trait `DateTruncPolicy<drizzle_core::dialect::SQLiteDialect>` is not implemented for `drizzle::sqlite::types::Text`
help: the following other types implement trait `DateTruncPolicy<D>`
 --> core/src/expr/datetime.rs
  |
  | impl DateTruncPolicy<PostgresDialect> for PgTimestamp {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `drizzle::ddl::postgres::types::Timestamp`
...
  | impl DateTruncPolicy<PostgresDialect> for PgTimestamptz {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `drizzle::ddl::postgres::types::Timestamptz`
note: required by a bound in `date_trunc`
 --> core/src/expr/datetime.rs
  |
  | pub fn date_trunc<'a, V, P, E>(
  |        ---------- required by a bound in this function
...
  |     E::SQLType: DateTruncPolicy<V::DialectMarker>,
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `date_trunc`

error[E0277]: this date/time function is not available for this dialect
 --> tests/ui/scalar_types_sqlite/fail/date_trunc_requires_postgres.rs:5:13
  |
5 |       let _ = date_trunc(
  |  _____________^
6 | |         "day",
7 | |         raw_non_null::<SQLiteValue, drizzle::sqlite::types::Text>("CURRENT_TIMESTAMP"),
8 | |     );
  | |_____^ use a dialect-specific alternative
  |
  = help: the trait `PostgresDateTimeSupport` is not implemented for `drizzle_core::dialect::SQLiteDialect`
help: the trait `PostgresDateTimeSupport` is implemented for `drizzle_core::dialect::PostgresDialect`
 --> core/src/expr/datetime.rs
  |
  | impl PostgresDateTimeSupport for PostgresDialect {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `date_trunc`
 --> core/src/expr/datetime.rs
  |
  | pub fn date_trunc<'a, V, P, E>(
  |        ---------- required by a bound in this function
...
  |     V::DialectMarker: PostgresDateTimeSupport,
  |                       ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `date_trunc`

error[E0277]: DATE_TRUNC output type is not defined for `drizzle::sqlite::types::Text` on this dialect
 --> tests/ui/scalar_types_sqlite/fail/date_trunc_requires_postgres.rs:5:13
  |
5 |       let _ = date_trunc(
  |  _____________^
6 | |         "day",
7 | |         raw_non_null::<SQLiteValue, drizzle::sqlite::types::Text>("CURRENT_TIMESTAMP"),
8 | |     );
  | |_____^ DATE_TRUNC accepts timestamp/timestamptz and preserves the timestamp flavor
  |
  = help: the trait `DateTruncPolicy<drizzle_core::dialect::SQLiteDialect>` is not implemented for `drizzle::sqlite::types::Text`
help: the following other types implement trait `DateTruncPolicy<D>`
 --> core/src/expr/datetime.rs
  |
  | impl DateTruncPolicy<PostgresDialect> for PgTimestamp {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `drizzle::ddl::postgres::types::Timestamp`
...
  | impl DateTruncPolicy<PostgresDialect> for PgTimestamptz {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `drizzle::ddl::postgres::types::Timestamptz`
